--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,17 @@
 .player-card {
-    width: 40%
+    width: 40%;
+    margin-top: 4em;
 }
 
 .container {
     display: flex;
     justify-content: center;
-    margin-top: 4em;
 }
 
 @media only screen and (max-width: 600px) {
     .player-card {
-        width: 90%;
+        width: 100%;
+        border-radius: 0;
+        margin-top: 0;
     }
   }
