--- a/src/app/components/read-list/read-list.component.scss
+++ b/src/app/components/read-list/read-list.component.scss
@@ -1,17 +1,23 @@
 .player-card {
-    width: 40%;
-    margin-top: 4em;
+  width: 40%;
+  margin-top: 4em;
 }
 
 .container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+}
+
+.spinner {
+  margin: auto;
+  margin-top: 4em !important;
+  margin-bottom: 4em !important;
 }
 
 @media only screen and (max-width: 600px) {
-    .player-card {
-        width: 100%;
-        border-radius: 0;
-        margin-top: 0;
-    }
+  .player-card {
+    width: 100%;
+    border-radius: 0;
+    margin-top: 0;
   }
+}
