make tool work per thread, differentiate between team and non team games

--- a/src/app/components/read-list/read-list.component.scss
+++ b/src/app/components/read-list/read-list.component.scss
@@ -14,6 +14,10 @@
   margin-bottom: 4em !important;
 }
 
+a {
+  color: #ffffffb3;
+}
+
 @media only screen and (max-width: 600px) {
   .player-card {
     width: 100%;
