--- a/src/app/components/read-list/read-list.component.html
+++ b/src/app/components/read-list/read-list.component.html
@@ -2,12 +2,26 @@
     <mat-card class="player-card">
       <mat-card-header>
         <mat-card-title>BAT COMPUTER 9000 (from scummiest to towniest)</mat-card-title>
+        <mat-card-subtitle>
+          <a *ngIf="threadNumber" href="{{'https://www.resetera.com/threads/' + threadNumber}}">Here's the link to the thread!</a>
+          <label *ngIf="!threadNumber">No thread number provided in the URL!</label>
+        </mat-card-subtitle>
       </mat-card-header>
-      <mat-card-content>
-        <mat-selection-list *ngIf="result.length" [multiple]="false">
-          <ng-container *ngFor="let team of result">
+      <mat-card-content *ngIf="teamGame">
+        <mat-selection-list *ngIf="resultTeams.length" [multiple]="false">
+          <ng-container *ngFor="let team of resultTeams">
             <mat-list-option *ngIf="team.alive" [value]="">
               {{team.name1 + ' & ' + team.name2}}
+            </mat-list-option>
+          </ng-container>
+        </mat-selection-list>
+        <mat-spinner class="spinner" *ngIf="!resultTeams.length"></mat-spinner>
+      </mat-card-content>
+      <mat-card-content *ngIf="!teamGame">
+        <mat-selection-list *ngIf="result.length" [multiple]="false">
+          <ng-container *ngFor="let player of result">
+            <mat-list-option *ngIf="player.status == 'alive'">
+              {{player.name}}
             </mat-list-option>
           </ng-container>
         </mat-selection-list>
