--- a/src/app/components/read-list/read-list.component.scss
+++ b/src/app/components/read-list/read-list.component.scss
@@ -18,6 +18,10 @@ a {
   color: #ffffffb3;
 }
 
+.list-header {
+  margin-left: 16px;
+}
+
 @media only screen and (max-width: 600px) {
   .player-card {
     width: 100%;
