--- a/src/app/components/read-list/read-list.component.html
+++ b/src/app/components/read-list/read-list.component.html
@@ -12,7 +12,8 @@
           >Here's the link to the thread!</a
         >
         <label *ngIf="!threadNumber"
-          >No thread number provided in the URL!</label
+          >No thread number provided in the URL! (Example:
+          mafia-scum-read-generator/?thread=[threadnumber])</label
         >
       </mat-card-subtitle>
     </mat-card-header>
